--- a/20.06.23/index.html
+++ b/20.06.23/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <body>
         <table align="center" valign="center" bgcolor="yellow" border="4" cellpadding="8" cellspacing="8" width="75%" height="500" style="border-collapse:collapse">
